# DataTable

./: .gitignore  CMakeLists.txt  README.md
build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  example_row_offsets
build-release/tests/: CTestTestfile.cmake  DataTableTests  DataTableTests[1]_include.cmake  DataTableTests[1]_tests.cmake  Makefile  cmake_install.cmake
docs/: HANDOFF.md
examples/: example_row_offsets.cpp
include/DataTable/: DataTable.h
src/: DataTable.cpp
tests/: CMakeLists.txt  test_DataTable.cpp  test_DataTable_PythonGeneratedIndex.cpp  test_get_value_data_set_1.cpp
tests/python_generators/: generate_csv.py  generate_large_csv_60k_20k.py  test_dataset_10k_40cols.index
tests/test_data_sets/: data_set_1.csv  missing_col_in_row.csv
tests/test_data_sets/small_fake_datasets/: data_set_1.csv
